--- a/src/styles/NicholasSzeto.css
+++ b/src/styles/NicholasSzeto.css
@@ -18,6 +18,16 @@
   background: linear-gradient(to bottom right, #029ffa, rgb(0, 0, 0));
 }
 
+.portal-container-nicholas {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  width: 100vw;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(23, 173, 233);
+}
+
 .back-arrow-container {
   position: absolute;
   top: 50px;
@@ -70,6 +80,8 @@
   height: 40px;
   background: transparent;
 }
+
+/* Dashboard */
 
 .dashboard-container-nicholas{
   display: flex;
