--- a/src/styles/TeodoraCaneva.css
+++ b/src/styles/TeodoraCaneva.css
@@ -5,6 +5,7 @@
 
 * {
   font-family: 'Ailerons';
+  font-family: 'Cambria';
   color: whitesmoke;
 }
 
@@ -45,8 +46,14 @@
   margin: 10px;
 }
 
+
 .title {
-  font-size: 65px;
+  font-size: 60px;
+  text-align: center;
+  margin-top: 50px;
+}
+.subtitle {
+  font-size: 24px;
   text-align: center;
 }
 
@@ -59,7 +66,7 @@
   font-size: 42px;
   margin-top: 50px;
 }
-
+/* lock screen */
 .portal-container {
   display: flex;
   flex-direction: column;
@@ -118,3 +125,94 @@
   margin-top: 10px;
   font-size: 154x;
 }
+/* profile page */
+.AboutTopContainer {
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+  align-items: center;
+  margin-top: 70px;
+}
+
+.AboutCenterBottomContainer {
+	flex: 2;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+  align-items: center;
+  margin-top: 70px;
+  margin-left: 70px;
+  margin-right: 70px;
+}
+
+.AboutText {
+	font-size: 18px;
+	color: #CBDBD7;
+	font-family: 'Proxima-Nova-Regular';
+}
+.Quote{
+  font-family: 'Proxima-Nova-Regular';
+  font-style: italic;
+  letter-spacing: 0px;
+  color: rgb(126, 164, 233);
+  font-weight: bold;
+}
+ /* dashboard */
+.close-icon-container {
+  position: absolute;
+  bottom: 50px;
+  right: 50px;
+} 
+.close-icon-dash {
+  width: 35px;
+  height: 35px;
+}
+
+.chart-container {
+  display: flex;
+  flex: 1;
+  justify-content: center;
+  align-items: center;
+}
+
+.container-1 {
+  background: linear-gradient(to top left, #f8f0bf, #f1f50e);
+}
+
+.container-2 {
+  flex: 2;
+  background: linear-gradient(to bottom left, rgb(247, 154, 169), #ffc3a0);
+}
+
+.container-3 {
+  justify-content: center;
+  align-items: stretch;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to bottom left, rgb(181, 201, 218), rgb(25, 97, 204));
+}
+
+.container-4 {
+  flex: 2;
+  flex-direction: column;
+  background: linear-gradient(to bottom right, #cfbbe6, #bb6fe0);
+}
+
+.container-heading {
+  font-size: 22px;
+  position: relative;
+  top: 50px;
+  left: 0;
+}
+
+.box {
+  min-width: 0;
+  margin: 5px;
+}
+.slideshow{
+  width: 330px;
+  max-width: 100%; 
+  max-height: 270px; 
+}
+ 
