fixed auth bug and added portfolio page.

--- a/src/styles/RyanLiszewski.css
+++ b/src/styles/RyanLiszewski.css
@@ -33,7 +33,7 @@
   justify-content: center;
 }
 
-.settings-container-ryan, .profile-container-ryan{
+.settings-container-ryan, .profile-container-ryan, .portfolio-container-ryan{
   order: 2;
   flex:13;
   background: linear-gradient(to left top, #724056,#E58860);
